Fixes typo in Markdown text

--- a/demo-1-hugging-face-tokenizer/hugging-face-tokenizer.ipynb
+++ b/demo-1-hugging-face-tokenizer/hugging-face-tokenizer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,17 +64,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Rory', \"'\", 's', 'shoes', 'are', 'mage', '##nta', 'and', 'so', 'are', 'Corey', \"'\", 's', 'but', 'they', 'aren', \"'\", 't', 'nearly', 'as', 'dark', '!']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Simple method getting tokens from text\n",
     "raw_text = '''Rory's shoes are magenta and so are Corey's but they aren't nearly as dark!'''\n",
@@ -85,17 +77,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['[CLS]', 'Rory', \"'\", 's', 'shoes', 'are', 'mage', '##nta', 'and', 'so', 'are', 'Corey', \"'\", 's', 'but', 'they', 'aren', \"'\", 't', 'nearly', 'as', 'dark', '!', '[SEP]']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This method also returns special tokens depending on the pretrained tokenizer\n",
     "detailed_tokens = my_tokenizer(raw_text).tokens()\n",
@@ -112,17 +96,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[101, 14845, 112, 188, 5743, 1132, 27595, 13130, 1105, 1177, 1132, 19521, 112, 188, 1133, 1152, 4597, 112, 189, 2212, 1112, 1843, 106, 102]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Way to get tokens as integer IDs\n",
     "print(my_tokenizer.encode(raw_text))"
@@ -130,18 +106,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['[CLS]', 'Rory', \"'\", 's', 'shoes', 'are', 'mage', '##nta', 'and', 'so', 'are', 'Corey', \"'\", 's', 'but', 'they', 'aren', \"'\", 't', 'nearly', 'as', 'dark', '!', '[SEP]']\n",
-      "[101, 14845, 112, 188, 5743, 1132, 27595, 13130, 1105, 1177, 1132, 19521, 112, 188, 1133, 1152, 4597, 112, 189, 2212, 1112, 1843, 106, 102]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(detailed_tokens)\n",
     "\n",
@@ -160,20 +127,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'input_ids': [101, 14845, 112, 188, 5743, 1132, 27595, 13130, 1105, 1177, 1132, 19521, 112, 188, 1133, 1152, 4597, 112, 189, 2212, 1112, 1843, 106, 102], 'token_type_ids': [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], 'attention_mask': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Returns an object that has a few different keys available\n",
     "my_tokenizer(raw_text)"
@@ -181,17 +137,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[101, 14845, 112, 188, 5743, 1132, 27595, 13130, 1105, 1177, 1132, 19521, 112, 188, 1133, 1152, 4597, 112, 189, 2212, 1112, 1843, 106, 102]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# focus on `input_ids` which are the IDs associated with the tokens.\n",
     "print(my_tokenizer(raw_text).input_ids)"
@@ -213,20 +161,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"[CLS] Rory's shoes are magenta and so are Corey's but they aren't nearly as dark! [SEP]\""
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Integer IDs for tokens\n",
     "ids = my_tokenizer.encode(raw_text)\n",
@@ -237,20 +174,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"Rory's shoes are magenta and so are Corey's but they aren't nearly as dark!\""
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# To ignore special tokens (depending on pretrained tokenizer)\n",
     "my_tokenizer.decode(ids, skip_special_tokens=True)"
@@ -258,43 +184,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['[CLS]',\n",
-       " 'Rory',\n",
-       " \"'\",\n",
-       " 's',\n",
-       " 'shoes',\n",
-       " 'are',\n",
-       " 'mage',\n",
-       " '##nta',\n",
-       " 'and',\n",
-       " 'so',\n",
-       " 'are',\n",
-       " 'Corey',\n",
-       " \"'\",\n",
-       " 's',\n",
-       " 'but',\n",
-       " 'they',\n",
-       " 'aren',\n",
-       " \"'\",\n",
-       " 't',\n",
-       " 'nearly',\n",
-       " 'as',\n",
-       " 'dark',\n",
-       " '!',\n",
-       " '[SEP]']"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# List of tokens as strings instead of one long string\n",
     "my_tokenizer.convert_ids_to_tokens(ids)"
@@ -312,7 +204,7 @@
    "metadata": {},
    "source": [
     "> One thing to consider is if a string is outside of the tokenizer's vocabulary,\n",
-    "> also know as an \"unkown\" token.\n",
+    "> also known as an \"unkown\" token.\n",
     "> \n",
     "> They are typically represented with `[UNK]` or\n",
     "> some other similar variant.\n",
@@ -345,19 +237,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🥱 the dog next door kept barking all night!!\n",
-      "['[CLS]', '[UNK]', 'the', 'dog', 'next', 'door', 'kept', 'barking', 'all', 'night', '!', '!', '[SEP]']\n",
-      "[CLS] [UNK] the dog next door kept barking all night!! [SEP]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "phrase = '🥱 the dog next door kept barking all night!!'\n",
     "ids = my_tokenizer.encode(phrase)\n",
@@ -368,19 +250,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "wow my dad thought mcdonalds sold tacos 💀\n",
-      "['[CLS]', 'w', '##ow', 'my', 'dad', 'thought', 'm', '##c', '##don', '##ald', '##s', 'sold', 'ta', '##cos', '[UNK]', '[SEP]']\n",
-      "[CLS] wow my dad thought mcdonalds sold tacos [UNK] [SEP]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "phrase = '''wow my dad thought mcdonalds sold tacos \\N{SKULL}'''\n",
     "ids = my_tokenizer.encode(phrase)\n",
