Reordered & reduce comments for solution

--- a/exercise-2-encoding-text/solution/encoding.ipynb
+++ b/exercise-2-encoding-text/solution/encoding.ipynb
@@ -14,6 +14,7 @@
    "source": [
     "from __future__ import annotations\n",
     "\n",
+    "# COMPLETE: Feel free to add other imports as needed\n",
     "import string\n",
     "import re"
    ]
@@ -45,9 +46,8 @@
    "outputs": [],
    "source": [
     "def normalize_text(text: str) -> str:\n",
-    "    # Can be multiple actions to normalize text\n",
+    "    # COMPLETE: Normalize incoming text; can be multiple actions to normalize text\n",
     "    # Only keep ASCII letters, numbers, punctuation, and whitespace characters\n",
-    "    # Evquivalent to string.printable\n",
     "    acceptable_characters = (\n",
     "        string.ascii_letters\n",
     "        + string.digits\n",
@@ -76,18 +76,7 @@
    "outputs": [],
    "source": [
     "def pretokenize_text(text: str) -> list[str]:\n",
-    "    # Character-based\n",
-    "    smaller_pieces = [char for char in text]\n",
-    "    return smaller_pieces"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def pretokenize_text(text: str) -> list[str]:\n",
+    "    # COMPLETE: Pretokenize normalized text\n",
     "    # Split based on spaces\n",
     "    smaller_pieces = text.split()\n",
     "    return smaller_pieces"
@@ -111,8 +100,9 @@
     "    # Apply created steps \n",
     "    normalized_text: str = normalize_text(text)\n",
     "    pretokenized_text: list[str] = pretokenize_text(normalized_text)\n",
+    "    # COMPLETE: Go through pretokenized text to create a list of tokens\n",
     "    tokens = []\n",
-    "    # Go through small pieces to make full tokens\n",
+    "    # Small 'pieces' to make full tokens\n",
     "    for word in pretokenized_text:\n",
     "        tokens.extend(\n",
     "            re.findall(\n",
@@ -138,9 +128,10 @@
    "source": [
     "# Useful for some tasks\n",
     "def postprocess_tokens(tokens: list[str]) -> list[str]:\n",
-    "    # Add beginning and end of sequence tokens\n",
-    "    bos_token = '##BOS##'\n",
-    "    eos_token = '##EOS##'\n",
+    "    # COMPLETE: Add beginning and end of sequence tokens to your tokenized text\n",
+    "    # Can use a format like '[BOS]' & '[EOS]'\n",
+    "    bos_token = '[BOS]'\n",
+    "    eos_token = '[EOS]'\n",
     "    updated_tokens = (\n",
     "        [bos_token]\n",
     "        + tokens\n",
@@ -153,14 +144,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Encoding: Putting It All Together"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Use this sample text to see how our tokenization pipeline handles the text."
+    "## Test Your Tokenization\n",
+    "\n",
+    "See how our tokenization pipeline handles the sample text below"
    ]
   },
   {
@@ -173,7 +159,6 @@
     "but we mustn't forget the nuumber 1 priority: the READER!\"\n",
     "'''\n",
     "\n",
-    "print(sample_text)\n",
     "sample_text"
    ]
   },
@@ -193,7 +178,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Encode the tokens to IDs by defining how to map each token to a unique ID.\n",
+    "# Encoding & Decoding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Encoding Text to Token IDs\n",
+    "\n",
+    "Create an encoder (`encode()`) that will encode the token strings to integer IDs\n",
+    "by defining how to map each token to a unique ID.\n",
     "\n",
     "> HINT: \n",
     "> \n",
@@ -221,20 +216,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# COMPLETE: Create an encoder to transform token strings to IDs using the sample\n",
+    "# corpus as the basis of your encoding\n",
+    "\n",
+    "# COMPLETE: Your code here (might be outside of the encode() function scope)\n",
+    "\n",
     "# Retrieve unique tokens (from the pipeline defined above) in a set\n",
     "unique_tokens = set()\n",
     "for text in sample_corpus:\n",
     "    tokens_from_text = tokenize_text(text)\n",
     "    tokens_from_text = postprocess_tokens(tokens_from_text)\n",
-    "    unique_tokens.update(tokens_from_text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    unique_tokens.update(tokens_from_text)\n",
+    "\n",
     "# Create mapping (dictionary) for unique tokens using arbitrary & unique IDs\n",
     "token2id = {\n",
     "    token: idx\n",
@@ -245,33 +238,70 @@
     "id2token = {\n",
     "    idx: token\n",
     "    for token, idx in token2id.items()\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create an encoder to transform token strings to IDs\n",
+    "}\n",
+    "\n",
+    "\n",
     "def encode(tokens: list[str]) -> list[int]:\n",
+    "    # COMPLETE: Complete this function to encode tokens to integer IDs\n",
     "    # Note this doesn't handle tokens not mapped\n",
-    "    encoded_tokens = [\n",
-    "        token2id[token]\n",
-    "        for token in tokens\n",
-    "    ]\n",
+    "    encoded_tokens = [ token2id[token] for token in tokens]\n",
     "    return encoded_tokens\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test `encode()`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create an encoder to transform IDs to token strings\n",
+    "# Use sample text for testing\n",
+    "sample_text = '''Mr. Louis continued to say, \"Penguins are important, \n",
+    "but we mustn't forget the nuumber 1 priority: the READER!\"\n",
+    "'''\n",
+    "# Create tokens (to be fed to encode())\n",
+    "tokens = tokenize_text(sample_text)\n",
+    "tokens = postprocess_tokens(tokens)\n",
+    "print(f'Tokens:\\n{tokens}\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test encode()\n",
+    "encoded_tokens = encode(tokens)\n",
+    "print(f'Encoded Tokens:\\n{encoded_tokens}\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Decoding Token IDs to Text\n",
+    "\n",
+    "Based on your enocder you created (`encode()`), create a decoder (`decode()`) to\n",
+    "take a list token IDs and map them to their associated token."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# COMPLETE: Create an encoder to transform IDs (from encode()) to token strings\n",
+    "\n",
     "def decode(ids: list[int]) -> list[str]:\n",
+    "    # COMPLETE: Complete this function to decode integer IDs to token strings\n",
     "    token_strings = [\n",
     "        id2token[idx]\n",
     "        for idx in ids\n",
@@ -280,23 +310,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test `decode()`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Testing out encoding and decoding \n",
+    "# Use sample text for testing\n",
     "sample_text = '''Mr. Louis continued to say, \"Penguins are important, \n",
     "but we mustn't forget the nuumber 1 priority: the READER!\"\n",
     "'''\n",
+    "# Create tokens\n",
     "tokens = tokenize_text(sample_text)\n",
     "tokens = postprocess_tokens(tokens)\n",
-    "\n",
     "print(f'Tokens:\\n{tokens}\\n')\n",
     "\n",
+    "# Create token IDs (to be fed to decode())\n",
     "encoded_tokens = encode(tokens)\n",
-    "print(f'Encoded Tokens:\\n{encoded_tokens}\\n')\n",
-    "\n",
+    "print(f'Encoded Tokens:\\n{encoded_tokens}\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test out decode()\n",
     "decoded_tokens = decode(encoded_tokens)\n",
     "print(f'Decoded Tokens:\\n{decoded_tokens}\\n')"
    ]
