--- a/exercise-2-encoding-text/starter/encoding.ipynb
+++ b/exercise-2-encoding-text/starter/encoding.ipynb
@@ -12,7 +12,9 @@
    },
    "outputs": [],
    "source": [
-    "from __future__ import annotations"
+    "from __future__ import annotations\n",
+    "\n",
+    "# TODO: Feel free to add other imports as needed"
    ]
   },
   {
@@ -42,7 +44,7 @@
    "outputs": [],
    "source": [
     "def normalize_text(text: str) -> str:\n",
-    "    # TODO: normalize incoming text\n",
+    "    # TODO: Normalize incoming text; can be multiple actions to normalize text\n",
     "    normalized_text = ''\n",
     "    return normalized_text"
    ]
@@ -61,7 +63,7 @@
    "outputs": [],
    "source": [
     "def pretokenize_text(text: str) -> list[str]:\n",
-    "    # TODO: pretokenize normalized text\n",
+    "    # TODO: Pretokenize normalized text\n",
     "    smaller_pieces = list()\n",
     "    return smaller_pieces"
    ]
@@ -102,9 +104,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def postprocess_tokens(tokens: list[str]) -> list[str]:\n",
-    "    # TODO: Add beginning and end of sequence tokens for your tokenized text\n",
+    "    # TODO: Add beginning and end of sequence tokens to your tokenized text\n",
     "    # Can use a format like '[BOS]' & '[EOS]'\n",
     "    updated_tokens = list()\n",
     "    return updated_tokens"
@@ -114,14 +115,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Encoding: Putting It All Together"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Use this sample text to see how our tokenization pipeline handles the text."
+    "## Test Your Tokenization\n",
+    "\n",
+    "See how our tokenization pipeline handles the sample text below"
    ]
   },
   {
@@ -134,7 +130,6 @@
     "but we mustn't forget the nuumber 1 priority: the READER!\"\n",
     "'''\n",
     "\n",
-    "print(sample_text)\n",
     "sample_text"
    ]
   },
@@ -154,7 +149,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Encode the tokens to IDs by defining how to map each token to a unique ID.\n",
+    "# Encoding & Decoding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Encoding Text to Token IDs\n",
+    "\n",
+    "Create an encoder (`encode()`) that will encode the token strings to integer IDs\n",
+    "by defining how to map each token to a unique ID.\n",
     "\n",
     "> HINT: \n",
     "> \n",
@@ -182,62 +187,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Retrieve unique tokens (from the pipeline defined above) in a set\n",
-    "unique_tokens = set()\n",
-    "for text in sample_corpus:\n",
-    "    tokens_from_text = tokenize_text(text)\n",
-    "    tokens_from_text = postprocess_tokens(tokens_from_text)\n",
-    "    unique_tokens.update(tokens_from_text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create mapping (dictionary) for unique tokens using arbitrary & unique IDs\n",
-    "token2id = {\n",
-    "    token: idx\n",
-    "    for idx, token in enumerate(unique_tokens)\n",
-    "}\n",
+    "# TODO: Create an encoder to transform token strings to IDs using the sample\n",
+    "# corpus as the basis of your encoding\n",
     "\n",
-    "# A mapping for IDs to convert back to token\n",
-    "id2token = {\n",
-    "    idx: token\n",
-    "    for token, idx in token2id.items()\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create an encoder to transform token strings to IDs\n",
+    "# TODO: Your code here (might be outside of the encode() function scope)\n",
+    "\n",
     "def encode(tokens: list[str]) -> list[int]:\n",
-    "    # Note this doesn't handle tokens not mapped\n",
-    "    encoded_tokens = [\n",
-    "        token2id[token]\n",
-    "        for token in tokens\n",
-    "    ]\n",
+    "    # TODO: Complete this function to encode tokens to integer IDs\n",
+    "    encoded_tokens = list()\n",
     "    return encoded_tokens\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Create an encoder to transform IDs to token strings\n",
-    "def decode(ids: list[int]) -> list[str]:\n",
-    "    token_strings = [\n",
-    "        id2token[idx]\n",
-    "        for idx in ids\n",
-    "    ]\n",
-    "    return token_strings"
+    "### Test `encode()`"
    ]
   },
   {
@@ -246,18 +211,85 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Testing out encoding and decoding \n",
+    "# Use sample text for testing\n",
     "sample_text = '''Mr. Louis continued to say, \"Penguins are important, \n",
     "but we mustn't forget the nuumber 1 priority: the READER!\"\n",
     "'''\n",
+    "# Create tokens (to be fed to encode())\n",
     "tokens = tokenize_text(sample_text)\n",
     "tokens = postprocess_tokens(tokens)\n",
+    "print(f'Tokens:\\n{tokens}\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test encode()\n",
+    "encoded_tokens = encode(tokens)\n",
+    "print(f'Encoded Tokens:\\n{encoded_tokens}\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Decoding Token IDs to Text\n",
     "\n",
+    "Based on your enocder you created (`encode()`), create a decoder (`decode()`) to\n",
+    "take a list token IDs and map them to their associated token."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Create an encoder to transform IDs (from encode()) to token strings\n",
+    "\n",
+    "def decode(ids: list[int]) -> list[str]:\n",
+    "    # TODO: Complete this function to decode integer IDs to token strings\n",
+    "    token_strings = list()\n",
+    "    return token_strings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test `decode()`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use sample text for testing\n",
+    "sample_text = '''Mr. Louis continued to say, \"Penguins are important, \n",
+    "but we mustn't forget the nuumber 1 priority: the READER!\"\n",
+    "'''\n",
+    "# Create tokens\n",
+    "tokens = tokenize_text(sample_text)\n",
+    "tokens = postprocess_tokens(tokens)\n",
     "print(f'Tokens:\\n{tokens}\\n')\n",
     "\n",
+    "# Create token IDs (to be fed to decode())\n",
     "encoded_tokens = encode(tokens)\n",
-    "print(f'Encoded Tokens:\\n{encoded_tokens}\\n')\n",
-    "\n",
+    "print(f'Encoded Tokens:\\n{encoded_tokens}\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test out decode()\n",
     "decoded_tokens = decode(encoded_tokens)\n",
     "print(f'Decoded Tokens:\\n{decoded_tokens}\\n')"
    ]
