Solution encode/decode handles unknown tokens - Not necessary to do from starter notebook

--- a/exercise-2-encoding-text/solution/encoding.ipynb
+++ b/exercise-2-encoding-text/solution/encoding.ipynb
@@ -16,7 +16,8 @@
     "\n",
     "# COMPLETE: Feel free to add other imports as needed\n",
     "import string\n",
-    "import re"
+    "import re\n",
+    "from collections import defaultdict"
    ]
   },
   {
@@ -228,14 +229,18 @@
     "    tokens_from_text = postprocess_tokens(tokens_from_text)\n",
     "    unique_tokens.update(tokens_from_text)\n",
     "\n",
+    "# Allow for \n",
+    "\n",
     "# Create mapping (dictionary) for unique tokens using arbitrary & unique IDs\n",
-    "token2id = {\n",
+    "token2id = defaultdict(lambda : 0) # Allow for unknown tokens to map to 0\n",
+    "token2id |= {\n",
     "    token: idx\n",
-    "    for idx, token in enumerate(unique_tokens)\n",
+    "    for idx, token in enumerate(unique_tokens, 1) # Skip 0 (represents unknown)\n",
     "}\n",
     "\n",
     "# A mapping for IDs to convert back to token\n",
-    "id2token = {\n",
+    "id2token = defaultdict(lambda : '[UNK]') # Allow for unknown token ('[UNK]')\n",
+    "id2token |= {\n",
     "    idx: token\n",
     "    for token, idx in token2id.items()\n",
     "}\n",
@@ -243,8 +248,7 @@
     "\n",
     "def encode(tokens: list[str]) -> list[int]:\n",
     "    # COMPLETE: Complete this function to encode tokens to integer IDs\n",
-    "    # Note this doesn't handle tokens not mapped\n",
-    "    encoded_tokens = [ token2id[token] for token in tokens]\n",
+    "    encoded_tokens = [token2id[token] for token in tokens]\n",
     "    return encoded_tokens\n"
    ]
   },
@@ -302,10 +306,7 @@
     "\n",
     "def decode(ids: list[int]) -> list[str]:\n",
     "    # COMPLETE: Complete this function to decode integer IDs to token strings\n",
-    "    token_strings = [\n",
-    "        id2token[idx]\n",
-    "        for idx in ids\n",
-    "    ]\n",
+    "    token_strings = [id2token[idx] for idx in ids]\n",
     "    return token_strings"
    ]
   },
