--- a/exercise-2-encoding-text/starter/encoding.ipynb
+++ b/exercise-2-encoding-text/starter/encoding.ipynb
@@ -212,9 +212,7 @@
    "outputs": [],
    "source": [
     "# Use sample text for testing\n",
-    "sample_text = '''Mr. Louis continued to say, \"Penguins are important, \n",
-    "but we mustn't forget the nuumber 1 priority: the READER!\"\n",
-    "'''\n",
+    "sample_text = sample_corpus[0]\n",
     "# Create tokens (to be fed to encode())\n",
     "tokens = tokenize_text(sample_text)\n",
     "tokens = postprocess_tokens(tokens)\n",
@@ -270,9 +268,7 @@
    "outputs": [],
    "source": [
     "# Use sample text for testing\n",
-    "sample_text = '''Mr. Louis continued to say, \"Penguins are important, \n",
-    "but we mustn't forget the nuumber 1 priority: the READER!\"\n",
-    "'''\n",
+    "sample_text = sample_corpus[0]\n",
     "# Create tokens\n",
     "tokens = tokenize_text(sample_text)\n",
     "tokens = postprocess_tokens(tokens)\n",
